# evolux-spark-sh4

./: EVOLUX-BUILD-HOWTO.txt  PINGULUX-BUILD-HOWTO.txt
tdt/cvs/apps/neutrino-hd/data/locale/: Makefile.am  deutsch.locale  english.locale  norsk.locale  russkij.locale
tdt/cvs/apps/neutrino/data/icons/: Makefile.am  bc_green.raw  bc_white.raw  bc_yellow.raw  biss_green.raw  biss_white.raw  biss_yellow.raw  camd3_green.raw  camd3_white.raw  camd3_yellow.raw  conax_green.raw  conax_white.raw  conax_yellow.raw  cw_green.raw  cw_white.raw  cw_yellow.raw  d_green.raw  d_white.raw  d_yellow.raw  help.raw  incubusCamd_green.raw  incubusCamd_white.raw  incubusCamd_yellow.raw  ird_green.raw  ird_white.raw  ird_yellow.raw  mbox_green.raw  mbox_white.raw  mbox_yellow.raw  mgcamd_green.raw  mgcamd_white.raw  mgcamd_yellow.raw  nagra_green.raw  nagra_white.raw  nagra_yellow.raw  nds_green.raw  nds_white.raw  nds_yellow.raw  oscam_green.raw  oscam_white.raw  (+16 more)
tdt/cvs/apps/tuxbox/plugins/: Makefile.am  configure.ac
tdt/cvs/apps/tuxbox/plugins/aio-grab/: Makefile.am  main.c
tdt/cvs/apps/tuxbox/plugins/blockads/: Makefile.am  Makefile.am.old  http.c  (+9 more)
tdt/cvs/cdk/: Archive  Makefile.am  Makefile.in  acinclude.m4  clean_neutrino.sh  config  configure  configure.ac  createEVOLUX.sh  doEVOLUX.sh  doit.sh  lastChoice  linux-sh4  localmacros  ltmain.sh  make.sh  makeUpdatePack.sh  rules-archive  rules-downcheck.pl  rules-install  rules-make  rules.pl  setuptdt.sh  ubu10.10-64bit-prepare.sh  ubu11.04-64bit-prepare.sh  ubu11.10-64bit-stm24-build.sh
tdt/cvs/cdk/Patches/: DVDPlayer.patch  OpenThreads.patch  e2-nightly-6-configure.diff  enigma2-nightly.0.diff  enigma2-nightly.5.diff  enigma2-nightly.5.graphlcd.diff  enigma2-nightly.Evolution.spark.0.diff  enigma2-nightly.Evolution.spark.5.diff  enigma2-nightly.Evolution.spark.diff  enigma2-nightly.VideoEnhancement.0.diff  enigma2-nightly.VideoEnhancement.diff  enigma2-nightly.menu.xml.spark.diff  graphlcd.patch  jpeg.diff  libtuxtxt-1.0-fix_dbox_headers.diff  linux-sh4-2.6.23.17-0123_spark.config  linux-sh4-2.6.23.17-0123_spark.config.debug  linux-sh4-2.6.23.17-0123_spark.config.new  linux-sh4-2.6.32.16-0205_spark.config  linux-sh4-2.6.32.28-0207_spark.config  linux-sh4-2.6.32.28-0207_spark.config.new  linux-sh4-2.6.32.46-0209_spark.config  linux-sh4-2.6.32.46-0209_spark.config.debug  linux-sh4-2.6.32.46-0209_spark.config.jffs2  linux-sh4-2.6.32.57-0210_spark.config  linux-sh4-2.6.32.57-0210_spark.config.debug  linux-sh4-2.6.32.57-0210_spark7162.config  linux-sh4-2.6.32.59-0211_spark.config  linux-sh4-2.6.32.59-0211_spark.config.debug  linux-sh4-2.6.32.59-0211_spark.config~  linux-sh4-2.6.32.59-0211_spark7162.config  linux-sh4-lirc_stm.patch  linux-sh4-spark7162_setup_stm24_0210.patch  linux-sh4-spark7162_setup_stm24_0210_default.patch  linux-sh4-spark7162_setup_stm24_0210_multi_yaffs2.patch  linux-sh4-spark7162_setup_stm24_0211_multi_yaffs2.patch  linux-sh4-spark_setup_stm23_0123.patch  linux-sh4-spark_setup_stm24_0207.patch  linux-sh4-spark_setup_stm24_0209.patch  linux-sh4-spark_setup_stm24_0209_default.patch  (+20 more)
tdt/cvs/cdk/Patches/busybox-1.19.3/: busybox-1.19.3.config
tdt/cvs/cdk/Patches/busybox-1.19.4/: busybox-1.19.4.config
tdt/cvs/cdk/Patches/busybox-1.20.1/: busybox-1.20.1.config
tdt/cvs/cdk/busybox-1.19.2/: busybox.links
tdt/cvs/cdk/dropbear-0.53.1/: Makefile  dbclient  dropbear  dropbearconvert  dropbearkey
tdt/cvs/cdk/freetype-2.4.8/: sh4-linux-freetype-config
tdt/cvs/cdk/freetype-2.4.8/objs/: apinames
tdt/cvs/cdk/graphlcd-base/: Make.config
tdt/cvs/cdk/graphlcd-base/glcddrivers/: ax206dpf.c  port.c
tdt/cvs/cdk/make/: bare-os.mk  bootstrap.mk  cleantargets.mk  contrib-apps.mk  contrib-libs.mk  diverse-tools.mk  enigma2-nightly.mk  enigma2-nightly.mk.own  enigma2-pli-nightly.mk  enigma2-pli-plugins.mk  enigma2.mk  find.txt  linux-kernel.mk  linux-kernel.mk.old  misc-specs.mk  misc_tools.mk  net-apps.mk  neutrino-hd.mk  neutrino-hd2.mk  neutrino-mp.mk  neutrino.mk  plugins.mk  release-enigma2-pli-nightly.mk  release.mk  release_enigma1_hd.mk  release_evolux.mk  release_evolux_neutrino-hd2.mk  release_evolux_neutrino-hd2_pli.mk  release_evolux_neutrino-hd_pli.mk  release_evolux_neutrino-hd_vdr2.mk  release_evolux_neutrino-vdr2.mk  release_evolux_pli.mk  release_evolux_triple.mk  release_evolux_triple.mk~  release_neutrino-hd.mk  release_neutrino-hd2.mk  release_neutrino-mp.mk  release_neutrino.mk  release_neutrino.mk~  release_neutrino_nightly.mk  (+4 more)
tdt/cvs/cdk/root/etc/: auto.usb  bootargs_evolux-flash-jffs2-change  bootargs_evolux-flash-yaffs2-change  bootargs_evolux_yaffs2  exports  fw_env.config  lcd4linux.conf  lircd.conf.09:00:07  lircd.conf.09:00:07:00:00:65:F1  lircd.conf.09:00:08  lircd.conf.09:00:08:00:00:06:D7  lircd.conf.09:00:0A  lircd.conf.09:00:0A:00:00:38:B0  lircd.conf.09:00:0B  lircd_spark.conf  lircd_spark.conf.amiko  lircrc  modules.available
tdt/cvs/cdk/root/lib/: libwrap.so.0
tdt/cvs/cdk/root/release/: autofs  cpu_frequ_spark_stm23.ko  fstab_spark  getfb.awk  halt_spark  halt_spark_enigma2  mountvirtfs  networking  neutrino_version.sh  rcS_spark  rcS_stm23_24_evolux_spark  rcS_stm23_24_evolux_spark.old  rcS_stm23_24_evolux_spark7162  rcS_stm23_24_neutrino_spark  rcS_stm23_24_spark  rcS_stm23_24_spark7162  rcS_stm23_evolux_spark  rcS_stm23_neutrino_spark  rcS_stm23_spark
tdt/cvs/cdk/root/sbin/: MAKEDEV  MAKEDEV_dual_tuner  MAKEDEV_flash  MAKEDEV_no_CI  MAKEDEV_twin_no_ci  fsck.vfat  ntpdate  uci
tdt/cvs/cdk/shrink/: boot_flash_mod_own  boot_flash_mod_own.922  boot_flash_mod_public  boot_orig_mod  install_E2.sh  makeimage.sh  makeimage922.sh  makepublic.sh  mkpyc.py  optipng.sh  pyshrink1.awk  pyshrink2.awk  pyshrink3.awk  rev922.version  shrinkp.sh  shrinkp26.sh  startpy.txt  stripit.sh  stripit2.sh  test.sh  textshrink.sh  upit.sh  x.sh
tdt/cvs/cdk/shrink/Patches/: EVOimage_patches_ufs910.patch  EVOimage_patches_ufs910.patch.old  EVOimage_patches_ufs922.patch  InfoBarGenerics.py.patch  Language.py.patch
tdt/cvs/cdk/tuxtxt/libtuxtxt/: tuxtxt_def.h
tdt/cvs/cdk/tuxtxt/tuxtxt/: tuxtxt.c  tuxtxt.h
(+1560 files in other folders)
