installdir = $(DATADIR)/neutrino/icons

install_DATA = \
	16_9.png 16_9_gray.png audio.raw blau.png border_lr.raw border_ul.raw \
	colors.png dbox.raw dd.png dd_avail.png dd_gray.png error.png features.png \
	file.png folder.png games.raw gelb.png gruen.png help.png help_small.png \
	home.png info.raw keybinding.png language.raw lcd.png lock.raw mainmenue.png \
	mounted.png mp3.png mute.png network.png not_mounted.png numericpad.raw ok.png power.png radar.pal \
	radar0.raw radar1.raw radar2.raw radar3.raw radar4.raw radar5.raw radar6.raw \
	radar7.raw radar8.raw radar9.raw radiomode.pal radiomode.raw recording.png \
	rot.png scan.pal scan.raw settings.png shell.png shutdown.pal shutdown.raw softupdate.png \
	streaming.png timer.png video.png volume.png volumebody.png volumeslider2.png \
	volumeslider2alpha.png volumeslider2blue.png volumeslider2green.png \
	volumeslider2red.png vtxt.png vtxt_gray.png movie.png movieplayer.raw \
	hidden.raw bookmarkmanager.png mute_small.png dbox_small.raw \
	0.png 1.png 2.png 3.png 4.png 5.png 6.png 7.png 8.png 9.png \
	up.png right.png down.png left.png fta.raw ca.png subt.png subt_gray.png \
	fontsize.raw net_gray.raw net_green.raw pictureviewer.raw \
	deutsch.raw english.raw polski.raw russkij.raw
