installdir = $(pkgdatadir)/skin_default/window

dist_install_DATA = \
	dvr.png \
	menu.png \
	progress_bar.png \
	unten.png \
	extrabar.png \
	movie_bar.png \
	radio_p_bar.png \
	unten_rechts.png \
	infobar_movie.png \
	oben_links.png \
	rechts.png \
	infobar.png \
	oben.png \
	scale.png \
	links.png \
	oben_rechts.png \
	unten_links.png

