installdir = $(pkglibdir)/python/Plugins/SystemPlugins

SUBDIRS = SoftwareManager PositionerSetup Satfinder \
	SkinSelector SatelliteEquipmentControl Videomode VideoTune Hotplug \
	DefaultServicesScanner DiseqcTester CommonInterfaceAssignment \
	CrashlogAutoSubmit CleanupWizard VideoEnhancement NetworkWizard \
	TempFanControl VFD-Icons Tuxtxt

install_PYTHON =	\
	__init__.py
