installdir = $(pkglibdir)/python/Plugins/Extensions/EPGRefresh

SUBDIRS = locale

install_PYTHON =	\
	EPGRefreshChannelEditor.py \
	EPGRefreshService.py \
	plugin.py \
	EPGRefreshConfiguration.py \
	EPGRefreshTimer.py \
	EPGRefresh.py \
	EPGRefreshResource.py \
	__init__.py

dist_install_DATA = \
	epgrefresh.xml

